--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -12108,3 +12108,8 @@ blockquote {
 .author .box-inner {
 	background:none;
 }
+
+
+.swatch-white-blue .tab-pane td, .swatch-white-blue .tab-pane td a{
+    color:#6692a6!important 
+}
