--- a/app/webroot/css/app.css
+++ b/app/webroot/css/app.css
@@ -12144,24 +12144,6 @@ background: #e74c3c !important;
 background: #e74c3c!important;
 color: #fff!important;
 }
-
-
-table.qlabs_grid_container {
-width: 100%;
-max-width: 1200px;
-height: 100%;
-border-collapse: collapse;
-position: relative;
-margin-left: auto;
-margin-right: auto;
-line-height: normal !important;
-font-family: arial, sans-serif !important;
-font-size: 12px !important;
-background: #ffffff;
-border: 1px solid #c5c5c5;
-color: #444444 !important;
--webkit-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.05);
--moz-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.05);
-box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.05);
+.swatch-beige-black th a, [class*="swatch-"] .swatch-beige-black th a {
+color: #FFF;
 }
-genomicVariants
